css/5212.css
.members-container>div {
   display:inline-block;
   vertical-align:top;
   padding: 5px;
}

.image-title{
   position:absolute;
   text-align:center;
   width: 100%;
   top:15%;
   color:white;
   font-weight: 300;
   transition: 0.6s;
   opacity:0;
   font-size: 50px;
}

.badge {
  height: 200px;
  width: 200px;
  text-align: center;
  position: absolute;
  font-size: 20px;
  vertical-align: middle;
  border-radius: 50%;
  background-color: rgba(255, 255, 255, 0.2);
  transition: 0.4s;
  -ms-transform: scale(0,0);
  -webkit-transform: scale(0,0);
  transform: scale(0, 0);
}

.badgetitle{
   color: #fff;
   padding-top: 80px;
}

.hovered{
   background-color: rgba(255, 255, 255, 0.8);

}

.header{
   font-weight: 300;
}

.donate-button{
   font-weight:300;
   color:black;
   font-size:50px;
}

.img-circle {
   border-radius: 50%;
   -webkit-border-radius: 50%;
	-moz-border-radius: 50%;
   width: 150px;
   height: 150px;
   box-shadow: 3px 3px 8px #888888;
   transition: 1s;
}

.img-circle:hover{
   width:200px;
   height:200px;
}

.member-label{
   font-weight:300; font-size: 30px;
}

.member-title{
   font-weight:300; font-size: 15px;
}

.member-section-label{
   font-weight:300; font-size: 45px;
}

@media (max-width: 800px) {
  .badge{
     -ms-transform: scale(0,0) !important;
     -webkit-transform: scale(0,0) !important;
     transform: scale(0, 0) !important;
  }
  .img-circle{
     width:75px;
     height:75px;
  }
  .img-circle:hover{
     width:150px;
     height:150px;
  }

  .member-label{
     font-weight:300; font-size: 20px;
  }

  .member-title{
     font-weight:300; font-size: 10px;
  }

  .member-section-label{
     font-weight:300; font-size: 30px;
  }
}
@media (min-width:600px){
   .members-container>br{
      display: none !important;
   }
   .members-container{
      overflow-x: scroll;
      white-space: nowrap;
   }
}

